welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type string
var ltr : string
          ^BDRBuggle:1: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var ltr : string
    ^BDRBuggle:4: error: not found: type string
	litMessage() : string
                       ^BDRBuggle:6: error: not found: value Z
	if(ltr = Z) recule();
                 ^BDRBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ltr = Z) recule();
               ^BDRBuggle:7: error: not found: value R
	if(ltr = R){
                 ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ltr = R){
               ^BDRBuggle:11: error: not found: value L
	if(ltr = L){
                 ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ltr = L){
               ^BDRBuggle:15: error: not found: value I
	if(ltr = I){
                 ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ltr = I){
               ^BDRBuggle:19: error: not found: value A
	if(ltr = A ){
                 ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ltr = A ){
               ^BDRBuggle:21: error: not found: value B
	if(ltr = B){
                 ^BDRBuggle:21: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ltr = B){
               ^BDRBuggle:24: error: not found: value C
	if(ltr = C ){
                 ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ltr = C ){
               ^BDRBuggle:28: error: not found: value Y
	if(ltr = Y){
                 ^BDRBuggle:28: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ltr = Y){
               ^BDRBuggle:32: error: not found: value X
     if(ltr =  X){
               ^BDRBuggle:32: error: type mismatch;
 found   : Unit
 required: Boolean
     if(ltr =  X){
            ^