welcome.lessons.welcome.bdr.BDR.scala.code
var ltr : string
while(estSurMessage){
	
	litMessage() : string

	if(ltr = Z) recule();
	if(ltr = R){
		droite();
		avance();
		}
	if(ltr = L){
		gauche();
		avance();
		}
	if(ltr = I){
		droite();
		droite();
		avance();}
	if(ltr = A ){
		avance();}
	if(ltr = B){
		avance();
		avance();}	
	if(ltr = C ){
			avance();
			avance();
			avance();}
	if(ltr = Y){
		recule();
		recule();
		}
     if(ltr =  X){
     	recule();
     	recule();
     	recule();}
	
	
	
	
	
	
	
	
	
	
	
	
	
	}